add watch app functionality

--- a/SOTPWatch/Base.lproj/Interface.storyboard
+++ b/SOTPWatch/Base.lproj/Interface.storyboard
@@ -35,7 +35,9 @@
                                             </group>
                                             <group width="1" height="0.29999999999999999" alignment="left" id="mHR-3y-DZl">
                                                 <items>
-                                                    <label width="1" height="1" alignment="left" text="Label" textAlignment="center" id="aHZ-6s-9pE"/>
+                                                    <label width="1" height="1" alignment="left" text="Label" textAlignment="center" id="aHZ-6s-9pE">
+                                                        <fontDescription key="font" type="system" pointSize="12"/>
+                                                    </label>
                                                 </items>
                                             </group>
                                         </items>
